use panama ops when running from sbt plugin