@@ -104,7 +104,8 @@ lazy val `elastiknn-plugin` = project
     elasticsearchPluginDescription := "...",
     elasticsearchPluginVersion := ElastiknnVersion,
     elasticsearchVersion := ElasticsearchVersion,
-
+    elasticsearchPluginRunSettings += "elastiknn.jdk-incubator-vector.enabled=true",
+    elasticsearchPluginEsJavaOpts += "--add-modules jdk.incubator.vector",
     libraryDependencies ++= Seq(
       "com.google.guava" % "guava" % "28.1-jre",
       "com.google.guava" % "failureaccess" % "1.0.1",
